--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sae_vn
+DB_DATABASE=proyecto3ro
 DB_USERNAME=root
 DB_PASSWORD=123456789
 
