--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=proyecto3ro
-DB_USERNAME=postgres
+DB_USERNAME=postgre
 DB_PASSWORD=123456789
 
 BROADCAST_DRIVER=log
